--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,47 +1,55 @@
-.row {
-text-align: center;
-
-}
-
-.card {
-display: inline-block;
-width: 100px;
-height: 100px;
-background-color: #eee;
-cursor: pointer;
-
-}
-
-.card:hover {
-    box-shadow: inset 0px 0px 0px 1px red;
+* {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
-}
-
-.monster-1 {
-    background: url(../images/monster-1.jpg)
-}
-.monster-2 {
-    background: url(../images/monster-2.jpg)
-}
-.monster-3 {
-    background: url(../images/monster-3.jpg)
-}
-.monster-4 {
-    background: url(../images/monster-4.jpg)
-}
-.monster-5 {
-    background: url(../images/monster-5.jpg)
-}
-.monster-6 {
-    background: url(../images/monster-6.jpg)
-}
-.monster-7 {
-    background: url(../images/monster-7.jpg)
-}
-.monster-8 {
-    background: url(../images/monster-8.jpg)
-}
-
-.image-hidden {
-    background: url(../images/cardback.jpg)
-}
+  }
+  
+  body {
+    height: 100vh;
+    display: flex;
+    background: #060AB2;
+  }
+  
+  .memory-game {
+    width: 640px;
+    height: 640px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    perspective: 1000px;
+  }
+  
+  .memory-card {
+    width: calc(25% - 10px);
+    height: calc(33.333% - 10px);
+    margin: 5px;
+    position: relative;
+    transform: scale(1);
+    transform-style: preserve-3d;
+    transition: transform .5s;
+    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+  }
+  
+  .memory-card:active {
+    transform: scale(0.97);
+    transition: transform .2s;
+  }
+  
+  .memory-card.flip {
+    transform: rotateY(180deg);
+  }
+  
+  .card-front,
+  .card-back {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    position: absolute;
+    border-radius: 5px;
+    background: #1C7CCC;
+    backface-visibility: hidden;
+  }
+  
+  .card-front {
+    transform: rotateY(180deg);
+  }
