--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,13 @@
   body {
     height: 100vh;
     display: flex;
-    background: #060AB2;
+    font-family: 'Amatic-sc', sans-serif;
+    background-image: url('../images/background-sky.jpg');
   }
   
   .memory-game {
-    width: 640px;
-    height: 640px;
+    width: 89vh;
+    height: 60%;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -43,10 +44,10 @@
   .card-back {
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: 10px;
     position: absolute;
     border-radius: 5px;
-    background: #1C7CCC;
+    background: #2376b9;
     backface-visibility: hidden;
   }
   
