--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,67 +1,117 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    height: 100vh;
-    display: flex;
-    font-family: 'Amatic-sc', sans-serif;
-    background-image: url('../images/background-sky.jpg');
-  }
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Josefin+Slab&display=swap');
 
-  .page-title {
-    color: #ff5100;
-    font-family: 'Amatic-sc', sans-serif;
-    font-weight: normal;
-    text-align: center;
-    font-size: 6em;
-  }
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Amatic-sc', sans-serif;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+
+html {
+  min-height: 100vh;
+  font-family:'Amatic-sc', sans-serif;
+}
+
+body {
+  margin: 0;
+ background-image: url('../images/background-sky.jpg'); 
+}
+
+.page-title {
+  color: #ff5100;
+  font-family: 'Amatic-sc', sans-serif;
+  font-weight: normal;
+  text-align: center;
+  font-size: 6em;
+}
+/* https://stackoverflow.com/questions/47319464/make-a-grid-column-span-the-entire-row */
+.game-info-container {
+  grid-column: 1 / -1;
+  display: flex;
+  justify-content: space-between;
+}
+
+.game-info {
+  color: #FFBB89;
+  font-size: 2em;
+}
+
+.game-container {
+  margin: 50px auto;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 10px;
+  justify-content: center;
+  perspective: 1000px;
+}
+
+.memory-card {
+  position: relative;
+  cursor: pointer;
+  height: 100px;
+  width: 100px;
+  transform: scale(1);
+  transform-style: preserve-3d;
+}
+/* need to fix bug of border showing properly change seudo class to active instead to give a zoom effect*/
+.memory-card:active {
+  /* box-shadow: inset 2px 2px 2px 10px white; */
+  /* box-sizing: border-box; */
+  transform: scale(.95);
+  transition: transform .3s;
+} 
+
+.memory-card.flip {
+  transform: rotateY(180deg);
+}
+
+.card-front, .card-back {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+  background: #2376b9;
+  border-radius: 12px;
+  border-width: 1px;
+  overflow: hidden;
+  transition: transform 500ms ease-in-out;
+  backface-visibility: hidden;
   
-  .memory-game {
-    width: 89vh;
-    height: 60%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    perspective: 1000px;
-  }
-  
-  .memory-card {
-    width: calc(25% - 10px);
-    height: calc(33.333% - 10px);
-    margin: 5px;
-    position: relative;
-    transform: scale(1);
-    transform-style: preserve-3d;
-    transition: transform .5s;
-    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
-  }
-  
-  .memory-card:active {
-    transform: scale(0.97);
-    transition: transform .2s;
-  }
-  
-  .memory-card.flip {
-    transform: rotateY(180deg);
-  }
-  
-  .card-front,
-  .card-back {
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    position: absolute;
-    border-radius: 5px;
-    background: #2376b9;
-    backface-visibility: hidden;
-  }
-  
-  .card-front {
-    transform: rotateY(180deg);
-  }
+}
+
+.card-front {
+  transform: rotateY(180deg);
+}
+
+.hero-btn {
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 12px 34px;
+  font-size: 15px;
+  background: transparent;
+  position: relative;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.hero-btn {
+  border: 1px solid #ff5100;
+  background: #ff5100;
+  color: #fff;
+  text-decoration: none;
+  transition: 1s;
+}
+
+
+
+
 
   /*----------------------------------  
 Section - Modal
@@ -90,7 +140,7 @@ Section - Modal
   background-color: #fff;
   /* 5% from the top and centered */
   margin: 5% auto;
-  border: 0.8em solid #fc4;
+  border: 0.8em solid #2376b9;
   padding-right: 2em;
   width: 80%;
 }
@@ -119,6 +169,6 @@ p.stats:last-child {
   margin-bottom: 1em;
 }
 .play-again-btn {
-  background: #28e;
+  background: #ff5100;
   margin-bottom: 1em;
 }
