--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,18 +119,15 @@ Section - Modal
 /* Modal (background) */
 .modal {
   /*Hidden by default */
-  display: none;
+  /* display: none; */
   position: fixed;
   z-index: 99;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  /* Fallback color */
-  background-color: rgb(46, 61, 73);
-  /* With opacity */
-  background-color: rgba(46, 61, 73, 0.6);
 }
+
 /* Modal Content/Box */
 .modal-content {
   display: flex;
@@ -138,11 +135,11 @@ Section - Modal
   justify-content: center;
   align-items: center;
   background-color: #fff;
-  /* 5% from the top and centered */
   margin: 5% auto;
   border: 0.8em solid #2376b9;
-  padding-right: 2em;
+  padding: 2rem 4rem;
   width: 80%;
+  border-radius: 20px;
 }
 /* The Close Button */
 .close {
