add media queries for modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ Section - Modal
 /* Modal (background) */
 .modal {
   /*Hidden by default */
-  display: none;
+  /* display: none; */
   position: fixed;
   z-index: 99;
   left: 0;
@@ -128,6 +128,44 @@ Section - Modal
   width: 100%;
   height: 100%;
 }
+
+@media (max-width: 445px) { 
+  .modal {
+      position: absolute;
+      top: 200px;
+      max-width: 1100px;
+      bottom: 150px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+      -webkit-perspective: 1000px;
+              perspective: 1000px;
+  }
+  }
+
+  @media (max-width: 445px) { 
+    .modal-content {
+   
+    }
+  }
+
+  @media (max-width: 445px) { 
+    .modal-content {
+        font-size: 25px;
+        line-height: 30px;
+        margin: auto;
+        padding: 0px;
+        
+        text-decoration: none;
+        width: 80%;
+    }
+    .close {
+      font-size: 1em;
+      text-align: right;
+    }
+  }
 
 /* Modal Content/Box */
 .modal-content {
@@ -162,6 +200,13 @@ Section - Modal
   width: 20em;
 }
 
+@media (max-width: 445px) { 
+  .modal-img {
+      margin: auto;
+      padding: 0px;
+      width: 80%;
+  }
+}
 
 .play-again-btn {
   background: #ff5100;
