--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,7 +208,19 @@ Section - Modal
   }
 }
 
-.play-again-btn {
-  background: #ff5100;
-  margin-bottom: 1em;
+
+
+
+
+/* 404 Error Page */
+
+.error {
+   background-image: url('../images/background-sky.jpg'); 
+  background-position: center center;
+  background-size: cover;
+  color: white;
 }
+.page-wrap {
+  min-height: 100vh;
+}
+/* end 404 error */
