--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,36 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Josefin+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto&display=swap');
 
-*{
+* {
   margin: 0;
   padding: 0;
-  font-family: 'Amatic-sc', sans-serif;
+  font-family: 'Permanent Marker', cursive;
   box-sizing: border-box;
   text-align: center;
 }
 
-
 html {
   min-height: 100vh;
-  font-family:'Amatic-sc', sans-serif;
-}
+  }
 
 body {
   margin: 0;
- background-image: url('../images/background-sky.jpg'); 
+  background-image: url('../images/background-sky.jpg');
 }
 
 .page-title {
   color: #ff5100;
-  font-family: 'Amatic-sc', sans-serif;
+  font-family: 'Permanent Marker', cursive;
   font-weight: normal;
   text-align: center;
   font-size: 6em;
 }
+
 /* https://stackoverflow.com/questions/47319464/make-a-grid-column-span-the-entire-row */
 .game-info-container {
   grid-column: 1 / -1;
   display: flex;
   justify-content: space-between;
+  padding: 20px;
 }
 
 .game-info {
@@ -44,9 +44,9 @@ body {
   grid-template-columns: repeat(4, auto);
   grid-gap: 10px;
   justify-content: center;
-  perspective: 1000px;
+  perspective: 1000px; /* to create a 3D flip effect -adapted from https://marina-ferreira.github.io/tutorials/js/memory-game/ */
+  
 }
-
 
 .memory-card {
   position: relative;
@@ -54,21 +54,21 @@ body {
   height: 100px;
   width: 100px;
   transform: scale(1);
-  transform-style: preserve-3d;
+  transform-style: preserve-3d;/* to position the cards in the 3d space created -adapted from https://marina-ferreira.github.io/tutorials/js/memory-game/ */
+  transition: transform .5s;
 }
-/* need to fix bug of border showing properly change seudo class to active instead to give a zoom effect*/
+
 .memory-card:active {
-  /* box-shadow: inset 2px 2px 2px 10px white; */
-  /* box-sizing: border-box; */
-  transform: scale(.95);
-  transition: transform .3s;
-} 
+  transform: scale(.97);
+  transition: transform .2s;
+}
 
 .memory-card.flip {
   transform: rotateY(180deg);
 }
 
-.card-front, .card-back {
+.card-front,
+.card-back {
   position: absolute;
   display: flex;
   justify-content: center;
@@ -82,7 +82,6 @@ body {
   overflow: hidden;
   transition: transform 500ms ease-in-out;
   backface-visibility: hidden;
-  
 }
 
 .card-front {
@@ -93,34 +92,30 @@ body {
   display: inline-block;
   text-decoration: none;
   color: #fff;
-  border: 1px solid #fff;
+  border: 1px solid #ff5100;
   padding: 12px 34px;
-  font-size: 15px;
-  background: transparent;
+  font-size: 20px;
+  background: #ff5100;
   position: relative;
   cursor: pointer;
   border-radius: 10px;
+  transition: 1s;
 }
 
-.hero-btn {
-  border: 1px solid #ff5100;
-  background: #ff5100;
-  color: #fff;
+.hero-btn:hover {
+  border: 1px solid #2376b9;
+  background: #2376b9;
+  color: #0d0d2f;
   text-decoration: none;
   transition: 1s;
 }
 
+/* game-over modal */
 
-
-
-
-  /*----------------------------------  
-Section - Modal
-------------------------------------*/
-/* Modal (background) */
 .modal {
   /*Hidden by default */
   /* display: none; */
+  background-color: rgba(0, 0, 0, 0.8);
   position: fixed;
   z-index: 99;
   left: 0;
@@ -129,58 +124,24 @@ Section - Modal
   height: 100%;
 }
 
-@media (max-width: 445px) { 
-  .modal {
-      position: absolute;
-      top: 200px;
-      max-width: 1100px;
-      bottom: 150px;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-      -webkit-perspective: 1000px;
-              perspective: 1000px;
-  }
-  }
+/* Modal Content Box */
 
-  @media (max-width: 445px) { 
-    .modal-content {
-   
-    }
-  }
-
-  @media (max-width: 445px) { 
-    .modal-content {
-        font-size: 25px;
-        line-height: 30px;
-        margin: auto;
-        padding: 0px;
-        
-        text-decoration: none;
-        width: 80%;
-    }
-    .close {
-      font-size: 1em;
-      text-align: right;
-    }
-  }
-
-/* Modal Content/Box */
 .modal-content {
+  font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #fff;
-  margin: 5% auto;
+  margin: 200px 150px;
   border: 0.8em solid #2376b9;
-  padding: 2rem 4rem;
-  width: 80%;
+  padding: 20px 40px;
   border-radius: 20px;
 }
+
 /* The Close Button */
+/* https://developer.mozilla.org/en-US/docs/Web/CSS/align-self */
+
 .close {
   align-self: flex-end;
   color: #28e;
@@ -193,22 +154,59 @@ Section - Modal
   text-decoration: none;
   cursor: pointer;
 }
+
 /* Modal Image*/
+
 .modal-img {
   display: inline-block;
   margin: 1em 0 1em;
   width: 20em;
 }
-
-@media (max-width: 445px) { 
-  .modal-img {
-      margin: auto;
-      padding: 0px;
-      width: 80%;
+/* this works for small device */
+@media only screen and (max-width: 600px) { 
+  .modal-content {
+   margin: 40px;
   }
+  .modal-img {
+    width: 10em;
+  }
+
+.close {
+  font-size: 2.5em;
+  padding-bottom: 20px;
 }
 
-.play-again-btn {
-  background: #ff5100;
-  margin-bottom: 1em;
+.page-title {
+  margin: 20px;
+  font-size: 2.5em;
 }
+
+.game-info-container {
+  padding: 0 15px;
+  font-size: 10px;
+  }
+
+.game-container {
+  display: grid;
+  width: 100vw;
+  grid-gap: 5px;
+}
+
+ .memory-card { 
+  height: 70px;
+  width: 70px;
+  text-align: center;
+}
+
+.card-front,
+.card-back {
+  padding: 3px;
+}
+
+}
+
+  @media only screen and (min-width: 992px) { 
+    .modal-content {
+     margin: 100px;
+    }
+
